# astrocore

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: component.rs  lib.rs  main.rs  resources.rs
src/plugins/: core.rs  mod.rs
src/systems/: hello_world.rs  mod.rs
tests/: main.rs
tests/common/: mod.rs  systems_hello_world_test.rs
